--- a/action.yml
+++ b/action.yml
@@ -178,9 +178,9 @@ runs:
           # create and mount build volume
           sudo lvcreate -l 100%FREE -n buildlv "${VG_NAME}"
           if [[ ${{ inputs.overprovision-lvm }} == 'true' ]]; then
-            sudo mkfs.btrfs "/dev/mapper/${VG_NAME}-buildlv"
+            sudo mkfs.btrfs -msingle "/dev/mapper/${VG_NAME}-buildlv"
           else
-            sudo mkfs.btrfs -K "/dev/mapper/${VG_NAME}-buildlv"
+            sudo mkfs.btrfs -msingle -K "/dev/mapper/${VG_NAME}-buildlv"
           fi
           sudo mount -o compress=zstd "/dev/mapper/${VG_NAME}-buildlv" "${BUILD_MOUNT_PATH}"
           sudo chown -R "${{ inputs.build-mount-path-ownership }}" "${BUILD_MOUNT_PATH}"
